--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.3.6",
     "pinia": "^2.0.32",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
